# spark_etl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  verify_parquet.py
data/: output.parquet
etl/: etl.py
test/: test_etl.py
